@@ -57,6 +57,9 @@ documents those changes that are of interest to users and admins.
     exiting. Patch from Don Albert, Bull.
  -- BGQ - set up the corner of a sub block correctly based on a relative
     position in the block instead of absolute.
+ -- BGQ - make sure the recently added select_jobinfo of a step launch request
+    isn't sent to the slurmd where environment variables would be overwritten
+    incorrectly.
 
 * Changes in SLURM 2.3.0.rc1
 ============================
